--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
+  "homepage": "https://nitinsingh9x.github.io/r-todo-app",
   "name": "react-todo-app",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "react-scripts": "0.9.0"
   },
   "dependencies": {
@@ -17,6 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
